Added sharing test functionnality (frontend & backend) with some minor fixes